--- a/features/FinanceManagement/app/views/finance_management/home_page/index.html.haml
+++ b/features/FinanceManagement/app/views/finance_management/home_page/index.html.haml
@@ -1,13 +1,14 @@
 .container
   .row
-    %div(class="col-md-8" )
-      %div(class="dl" )
-        -if @customer.present?
-          -@customer.each do |customer|
-            %dt
-              %span 客户#{customer.name}:
-              %span
-                .progress
-                  .progress-bar(process = "#{customer.original_funds.to_f/@original_funds_total}")
-                    %div 起始资金:#{customer.original_funds}元
-                  %span.sr-only 起始资金
+    #original_statistics_pip
+      -@original_statistics.each_value do |original_statistic|
+        .col-md-6
+          .panel.panel-default
+            .panel-heading
+              = original_statistic[:head]
+            .panel-body
+              %div
+                = original_statistic[:pie_tips]
+              .pie(id="pie_#{original_statistic[:id]}" )
+              .none
+                =raw original_statistic[:bind_data]
