--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     = javascript_include_tag "application"
     = javascript_include_tag @custom_js if @custom_js
     = csrf_meta_tags
+    %meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
   %body
     #wrapper
       =render "shared/header"
