--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -504,3 +504,49 @@
     width: 400px;
     height: 170px;
 }
+
+
+.useredit{
+    margin-bottom: 10px;
+}
+
+.useredit label{
+    float: left;
+    width: 17%;
+    margin-right: 20px;
+    text-align: right;
+    font-size: 14px;
+}
+
+.useredit_input{
+    display: block;
+    height: 34px;
+    width: auto;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.428571429;
+    color: #555555;
+    vertical-align: middle;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+}
+
+.useredit_input:focus{
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+}
+
+
+.useredit_input[disabled],
+.useredit_input[readonly],
+fieldset[disabled] .form-control {
+    cursor: not-allowed;
+    background-color: #eeeeee;
+}
